--- a/assets/scss/components/_pagetitle.scss
+++ b/assets/scss/components/_pagetitle.scss
@@ -7,6 +7,15 @@
   text-align: center;
 }
 
+.c-hello {
+  color: var(--gray-900);
+  font: 800 12vw/1.3 var(--font-stack);
+  letter-spacing: -0.03em;
+  margin-bottom: 8.49vw;
+  position: relative;
+  text-align: center;
+}
+
 .c-title__text {
   position: relative;
 }
@@ -18,6 +27,17 @@
   position: absolute;
   right: 0;
   top: 0;
+}
+
+.c-hello__inner {
+  filter: url('#titleFilter');
+  display: inline-block;
+  transform: scale(1, -1);
+  color: rgba(53, 53, 53, 0.418);
+  -moz-transform: scale(1, -1);
+  -webkit-transform: scale(1, -1);
+  -o-transform: scale(1, -1);
+  -ms-transform: scale(1, -1);
 }
 
 .c-title__inner {
